--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "functions for daily usage",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest --config test/config/jest.config.js --detectOpenHandles"
   },
   "repository": {
     "type": "git",
@@ -17,12 +17,13 @@
   },
   "homepage": "https://github.com/normancarcamo/fns#readme",
   "devDependencies": {
-    "jest": "^23.6.0"
-  },
-  "dependencies": {
-    "@babel/core": "^7.2.0",
-    "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^23.6.0",
+    "@babel/cli": "^7.2.0",
+    "@babel/runtime": "^7.2.0",
+    "@babel/core": "*",
+    "@babel/preset-env": "*",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-jest": "*",
+    "jest": "*",
     "deep-object-search": "^1.0.0",
     "jest-chain": "^1.0.5",
     "jest-extended": "^0.11.0",
