--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
   "homepage": "https://github.com/normancarcamo/fns#readme",
   "devDependencies": {
     "@babel/cli": "^7.2.0",
-    "@babel/runtime": "^7.2.0",
     "@babel/core": "*",
+    "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/preset-env": "*",
+    "@babel/runtime": "^7.2.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "*",
-    "jest": "*",
     "deep-object-search": "^1.0.0",
+    "jest": "*",
     "jest-chain": "^1.0.5",
     "jest-extended": "^0.11.0",
     "jest-html-reporter": "^2.4.2",
