--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "url": "https://github.com/normancarcamo/fns/issues"
   },
   "homepage": "https://github.com/normancarcamo/fns#readme",
+  "dependencies": {
+    "deep-object-search": "^1.0.0"
+  },
   "devDependencies": {
     "@babel/cli": "^7.2.0",
     "@babel/core": "*",
@@ -24,11 +27,9 @@
     "@babel/runtime": "^7.2.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "*",
-    "deep-object-search": "^1.0.0",
     "jest": "*",
     "jest-chain": "^1.0.5",
     "jest-extended": "^0.11.0",
-    "jest-html-reporter": "^2.4.2",
-    "regenerator-runtime": "^0.13.1"
+    "jest-html-reporter": "^2.4.2"
   }
 }
