--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "homepage": "https://github.com/normancarcamo/fns#readme",
   "dependencies": {
-    "deep-object-search": "^1.0.0"
+    "deep-object-search": "^1.0.0",
+    "pino": "^5.10.1",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.0",
